0.6/_sources/checks_gallery/vision/index.rst.txt
:orphan:



.. _sphx_glr_checks_gallery_vision:

================
Vision Checks
================

.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_checks_gallery_vision_distribution:

Data Distribution
===================




.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the label property outliers che...">

.. only:: html

 .. figure:: /checks_gallery/vision/distribution/images/thumb/sphx_glr_plot_label_property_outliers_thumb.png
     :alt: Label Property Outliers

     :ref:`sphx_glr_checks_gallery_vision_distribution_plot_label_property_outliers.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/vision/distribution/plot_label_property_outliers

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the image property outliers che...">

.. only:: html

 .. figure:: /checks_gallery/vision/distribution/images/thumb/sphx_glr_plot_image_property_outliers_thumb.png
     :alt: Image Property Outliers

     :ref:`sphx_glr_checks_gallery_vision_distribution_plot_image_property_outliers.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/vision/distribution/plot_image_property_outliers

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding Heatmap comparison check.">

.. only:: html

 .. figure:: /checks_gallery/vision/distribution/images/thumb/sphx_glr_plot_heatmap_comparison_thumb.png
     :alt: Heatmap Comparison

     :ref:`sphx_glr_checks_gallery_vision_distribution_plot_heatmap_comparison.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/vision/distribution/plot_heatmap_comparison

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the image dataset drift check, ...">

.. only:: html

 .. figure:: /checks_gallery/vision/distribution/images/thumb/sphx_glr_plot_image_dataset_drift_thumb.png
     :alt: Image Dataset Drift

     :ref:`sphx_glr_checks_gallery_vision_distribution_plot_image_dataset_drift.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/vision/distribution/plot_image_dataset_drift

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the image property drift check.">

.. only:: html

 .. figure:: /checks_gallery/vision/distribution/images/thumb/sphx_glr_plot_image_property_drift_thumb.png
     :alt: Image Property Drift Check

     :ref:`sphx_glr_checks_gallery_vision_distribution_plot_image_property_drift.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/vision/distribution/plot_image_property_drift

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the vision label drift check.">

.. only:: html

 .. figure:: /checks_gallery/vision/distribution/images/thumb/sphx_glr_plot_train_test_label_drift_thumb.png
     :alt: Train Test Label Drift

     :ref:`sphx_glr_checks_gallery_vision_distribution_plot_train_test_label_drift.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/vision/distribution/plot_train_test_label_drift

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the vision prediction drift che...">

.. only:: html

 .. figure:: /checks_gallery/vision/distribution/images/thumb/sphx_glr_plot_train_test_prediction_drift_thumb.png
     :alt: Train Test Prediction Drift

     :ref:`sphx_glr_checks_gallery_vision_distribution_plot_train_test_prediction_drift.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/vision/distribution/plot_train_test_prediction_drift
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_checks_gallery_vision_methodology:

Methodology
===========


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

 .. figure:: /checks_gallery/vision/methodology/images/thumb/sphx_glr_plot_similar_image_leakage_thumb.png
     :alt: Similar Image Leakage

     :ref:`sphx_glr_checks_gallery_vision_methodology_plot_similar_image_leakage.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/vision/methodology/plot_similar_image_leakage

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the &quot;Single Feature Contribution...">

.. only:: html

 .. figure:: /checks_gallery/vision/methodology/images/thumb/sphx_glr_plot_simple_feature_contribution_thumb.png
     :alt: Simple Feature Contribution

     :ref:`sphx_glr_checks_gallery_vision_methodology_plot_simple_feature_contribution.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/vision/methodology/plot_simple_feature_contribution
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_checks_gallery_vision_performance:

Performance
===========


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the confusion matrix check.">

.. only:: html

 .. figure:: /checks_gallery/vision/performance/images/thumb/sphx_glr_plot_confusion_matrix_thumb.png
     :alt: Confusion Matrix

     :ref:`sphx_glr_checks_gallery_vision_performance_plot_confusion_matrix.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/vision/performance/plot_confusion_matrix

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding image segment performance check...">

.. only:: html

 .. figure:: /checks_gallery/vision/performance/images/thumb/sphx_glr_plot_image_segment_performance_thumb.png
     :alt: Image Segment Performance

     :ref:`sphx_glr_checks_gallery_vision_performance_plot_image_segment_performance.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/vision/performance/plot_image_segment_performance

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the mean average recall report ...">

.. only:: html

 .. figure:: /checks_gallery/vision/performance/images/thumb/sphx_glr_plot_mean_average_recall_report_thumb.png
     :alt: Mean Average Recall Report

     :ref:`sphx_glr_checks_gallery_vision_performance_plot_mean_average_recall_report.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/vision/performance/plot_mean_average_recall_report

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the mean average precision repo...">

.. only:: html

 .. figure:: /checks_gallery/vision/performance/images/thumb/sphx_glr_plot_mean_average_precision_report_thumb.png
     :alt: Mean Average Precision Report

     :ref:`sphx_glr_checks_gallery_vision_performance_plot_mean_average_precision_report.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/vision/performance/plot_mean_average_precision_report

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding robustness report check.">

.. only:: html

 .. figure:: /checks_gallery/vision/performance/images/thumb/sphx_glr_plot_robustness_report_thumb.png
     :alt: Robustness Report

     :ref:`sphx_glr_checks_gallery_vision_performance_plot_robustness_report.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/vision/performance/plot_robustness_report

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding simple model comparison check.">

.. only:: html

 .. figure:: /checks_gallery/vision/performance/images/thumb/sphx_glr_plot_simple_model_comparison_thumb.png
     :alt: Simple Model Comparison

     :ref:`sphx_glr_checks_gallery_vision_performance_plot_simple_model_comparison.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/vision/performance/plot_simple_model_comparison

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the model error analysis check.">

.. only:: html

 .. figure:: /checks_gallery/vision/performance/images/thumb/sphx_glr_plot_model_error_analysis_thumb.png
     :alt: Model Error Analysis check

     :ref:`sphx_glr_checks_gallery_vision_performance_plot_model_error_analysis.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/vision/performance/plot_model_error_analysis

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the class performance check.">

.. only:: html

 .. figure:: /checks_gallery/vision/performance/images/thumb/sphx_glr_plot_class_performance_thumb.png
     :alt: Class Performance

     :ref:`sphx_glr_checks_gallery_vision_performance_plot_class_performance.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/vision/performance/plot_class_performance
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-gallery


  .. container:: sphx-glr-download sphx-glr-download-python

    :download:`Download all examples in Python source code: vision_python.zip </checks_gallery/vision/vision_python.zip>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

    :download:`Download all examples in Jupyter notebooks: vision_jupyter.zip </checks_gallery/vision/vision_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
