0.9/_sources/checks_gallery/vision/index.rst.txt
:orphan:

================
Vision Checks
================


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>

Custom Checks
=============



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In addition to deepchecks&#x27; built-in checks, it is possible to extend deepchecks by implementing...">

.. only:: html

  .. image:: /checks_gallery/vision/custom/images/thumb/sphx_glr_plot_create_a_custom_check_thumb.png
    :alt: Create a Custom Check

  :ref:`sphx_glr_checks_gallery_vision_custom_plot_create_a_custom_check.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a Custom Check</div>
    </div>


.. raw:: html

    </div>

Data Integrity
==============




.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the image property outliers che...">

.. only:: html

  .. image:: /checks_gallery/vision/data_integrity/images/thumb/sphx_glr_plot_image_property_outliers_thumb.png
    :alt: Image Property Outliers

  :ref:`sphx_glr_checks_gallery_vision_data_integrity_plot_image_property_outliers.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Image Property Outliers</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the label property outliers che...">

.. only:: html

  .. image:: /checks_gallery/vision/data_integrity/images/thumb/sphx_glr_plot_label_property_outliers_thumb.png
    :alt: Label Property Outliers

  :ref:`sphx_glr_checks_gallery_vision_data_integrity_plot_label_property_outliers.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Label Property Outliers</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the &quot;Property Label Correlation&quot;...">

.. only:: html

  .. image:: /checks_gallery/vision/data_integrity/images/thumb/sphx_glr_plot_property_label_correlation_thumb.png
    :alt: Property Label Correlation

  :ref:`sphx_glr_checks_gallery_vision_data_integrity_plot_property_label_correlation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Property Label Correlation</div>
    </div>


.. raw:: html

    </div>

Model Evaluation
================


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the confusion matrix check.">

.. only:: html

  .. image:: /checks_gallery/vision/model_evaluation/images/thumb/sphx_glr_plot_confusion_matrix_thumb.png
    :alt: Confusion Matrix

  :ref:`sphx_glr_checks_gallery_vision_model_evaluation_plot_confusion_matrix.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Confusion Matrix</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the mean average precision repo...">

.. only:: html

  .. image:: /checks_gallery/vision/model_evaluation/images/thumb/sphx_glr_plot_mean_average_precision_report_thumb.png
    :alt: Mean Average Precision Report

  :ref:`sphx_glr_checks_gallery_vision_model_evaluation_plot_mean_average_precision_report.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mean Average Precision Report</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the mean average recall report ...">

.. only:: html

  .. image:: /checks_gallery/vision/model_evaluation/images/thumb/sphx_glr_plot_mean_average_recall_report_thumb.png
    :alt: Mean Average Recall Report

  :ref:`sphx_glr_checks_gallery_vision_model_evaluation_plot_mean_average_recall_report.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mean Average Recall Report</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding image segment performance check...">

.. only:: html

  .. image:: /checks_gallery/vision/model_evaluation/images/thumb/sphx_glr_plot_image_segment_performance_thumb.png
    :alt: Image Segment Performance

  :ref:`sphx_glr_checks_gallery_vision_model_evaluation_plot_image_segment_performance.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Image Segment Performance</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding robustness report check.">

.. only:: html

  .. image:: /checks_gallery/vision/model_evaluation/images/thumb/sphx_glr_plot_robustness_report_thumb.png
    :alt: Robustness Report

  :ref:`sphx_glr_checks_gallery_vision_model_evaluation_plot_robustness_report.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Robustness Report</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding simple model comparison check.">

.. only:: html

  .. image:: /checks_gallery/vision/model_evaluation/images/thumb/sphx_glr_plot_simple_model_comparison_thumb.png
    :alt: Simple Model Comparison

  :ref:`sphx_glr_checks_gallery_vision_model_evaluation_plot_simple_model_comparison.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simple Model Comparison</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the model error analysis check.">

.. only:: html

  .. image:: /checks_gallery/vision/model_evaluation/images/thumb/sphx_glr_plot_model_error_analysis_thumb.png
    :alt: Model Error Analysis check

  :ref:`sphx_glr_checks_gallery_vision_model_evaluation_plot_model_error_analysis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Model Error Analysis check</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding single dataset performance chec...">

.. only:: html

  .. image:: /checks_gallery/vision/model_evaluation/images/thumb/sphx_glr_plot_single_dataset_performance_thumb.png
    :alt: Single Dataset Performance

  :ref:`sphx_glr_checks_gallery_vision_model_evaluation_plot_single_dataset_performance.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Single Dataset Performance</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the class performance check.">

.. only:: html

  .. image:: /checks_gallery/vision/model_evaluation/images/thumb/sphx_glr_plot_class_performance_thumb.png
    :alt: Class Performance

  :ref:`sphx_glr_checks_gallery_vision_model_evaluation_plot_class_performance.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Class Performance</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the vision prediction drift che...">

.. only:: html

  .. image:: /checks_gallery/vision/model_evaluation/images/thumb/sphx_glr_plot_train_test_prediction_drift_thumb.png
    :alt: Train Test Prediction Drift

  :ref:`sphx_glr_checks_gallery_vision_model_evaluation_plot_train_test_prediction_drift.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Train Test Prediction Drift</div>
    </div>


.. raw:: html

    </div>

Train Test Validation
=====================


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the New Labels check.">

.. only:: html

  .. image:: /checks_gallery/vision/train_test_validation/images/thumb/sphx_glr_plot_new_labels_thumb.png
    :alt: New Labels

  :ref:`sphx_glr_checks_gallery_vision_train_test_validation_plot_new_labels.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">New Labels</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding Heatmap comparison check.">

.. only:: html

  .. image:: /checks_gallery/vision/train_test_validation/images/thumb/sphx_glr_plot_heatmap_comparison_thumb.png
    :alt: Heatmap Comparison

  :ref:`sphx_glr_checks_gallery_vision_train_test_validation_plot_heatmap_comparison.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Heatmap Comparison</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the image dataset drift check, ...">

.. only:: html

  .. image:: /checks_gallery/vision/train_test_validation/images/thumb/sphx_glr_plot_image_dataset_drift_thumb.png
    :alt: Image Dataset Drift

  :ref:`sphx_glr_checks_gallery_vision_train_test_validation_plot_image_dataset_drift.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Image Dataset Drift</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

  .. image:: /checks_gallery/vision/train_test_validation/images/thumb/sphx_glr_plot_similar_image_leakage_thumb.png
    :alt: Similar Image Leakage

  :ref:`sphx_glr_checks_gallery_vision_train_test_validation_plot_similar_image_leakage.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Similar Image Leakage</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the image property drift check.">

.. only:: html

  .. image:: /checks_gallery/vision/train_test_validation/images/thumb/sphx_glr_plot_image_property_drift_thumb.png
    :alt: Image Property Drift

  :ref:`sphx_glr_checks_gallery_vision_train_test_validation_plot_image_property_drift.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Image Property Drift</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the &quot;Property Label Correlation ...">

.. only:: html

  .. image:: /checks_gallery/vision/train_test_validation/images/thumb/sphx_glr_plot_property_label_correlation_change_thumb.png
    :alt: Property Label Correlation Change

  :ref:`sphx_glr_checks_gallery_vision_train_test_validation_plot_property_label_correlation_change.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Property Label Correlation Change</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding label drift check.">

.. only:: html

  .. image:: /checks_gallery/vision/train_test_validation/images/thumb/sphx_glr_plot_train_test_label_drift_thumb.png
    :alt: Train Test Label Drift

  :ref:`sphx_glr_checks_gallery_vision_train_test_validation_plot_train_test_label_drift.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Train Test Label Drift</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:

   /checks_gallery/vision/custom/index.rst
   /checks_gallery/vision/data_integrity/index.rst
   /checks_gallery/vision/model_evaluation/index.rst
   /checks_gallery/vision/train_test_validation/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: vision_python.zip </checks_gallery/vision/vision_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: vision_jupyter.zip </checks_gallery/vision/vision_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
